--- a/smat-lab/package.json
+++ b/smat-lab/package.json
@@ -1,5 +1,5 @@
 {
-  "homapage": "./",
+  "homapage": "https://smat-lab.github.io/SMAT-Lab.github.io",
   "name": "smat-lab",
   "version": "0.1.0",
   "private": true,
