--- a/.github/workflows/build_deploy_react.yml
+++ b/.github/workflows/build_deploy_react.yml
@@ -28,5 +28,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
+          cd smat-lab
           npm ci
           npm run deploy
