--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,9 @@ name: SMAT-Lab Page Deploy
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: 
-      "master"
+    branches:
+      - main
+      
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
