--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
         uses: actions/checkout@v2
         
       # Enter react file
-      - name: Enter React File
-        run: cd ./smat-lab && pwd
+      - name: Enter React File and Install
+        run: cd ./smat-lab && pwd && npm install
 
       # Runs a single command using the runners shell
       - name: Install and build
-        run: cd ./smat-lab && pwd && npm install && npm run build
+        run: cd ./smat-lab && pwd && npm run build
 
       # Runs a set of commands using the runners shell
       - name: Deploy
