--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install and build
-        run: cd ./smat-lab && pwd && npm run build
+        run: cd ./smat-lab && pwd && npm run-script build
 
       # Runs a set of commands using the runners shell
       - name: Deploy
