--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install and build
-        run: cd ./smat-lab && pwd && npm run-script build
-
+        run: cd ./smat-lab && pwd && CI= npm run build
+        
       # Runs a set of commands using the runners shell
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.2.1
