--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,7 @@ jobs:
         
       # Runs a set of commands using the runners shell
       - name: Deploy
-        run: cd ./smat-lab && CI= npm run deploy
-#         uses: JamesIves/github-pages-deploy-action@4.2.1
-#         with:
-#           branch: gh-pages # The branch the action should deploy to.
-#           folder: build # The folder the action should deploy.
+        uses: JamesIves/github-pages-deploy-action@4.2.1
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: ./smat-lab/build # The folder the action should deploy.
